<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_name"
                android:hint="@string/hint_book_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingLeft="4dp">

            <!-- Price field -->
               <EditText
                   android:id="@+id/edit_book_price"
                   android:hint="@string/hint_book_price"
                   android:inputType="textCapWords"
                   style="@style/EditorFieldStyle" />
               <TextView
                   android:id="@+id/label_price_units"
                   android:text="@string/unit_book_price"
                   style="@style/EditorUnitsStyle"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_quantity"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Quantity drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_quantity"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="12dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:onClick="decrement"
                android:text="-"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/quantity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/quantity_value"
                android:textColor="@android:color/black"
                android:textSize="10sp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:onClick="increment"
                android:text="+"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:id="@+id/container_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_supplier"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Supplier field -->
            <EditText
                android:id="@+id/edit_book_supplier"
                android:hint="@string/hint_supplier_name"
                android:inputType="text"
                style="@style/EditorFieldStyle" />
            <!-- Supplier phone field -->
            <EditText
                android:id="@+id/edit_book_supplier_phone"
                android:hint="@string/hint_supplier_phone"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_gravity="center"
        android:text="@string/order"
       />

</LinearLayout>